first calculator build

--- a/index.html
+++ b/index.html
@@ -19,7 +19,41 @@
       <div
         class="calculator-container row justify-content-center align-items-center"
       >
-        <div class="calculator col-3"></div>
+        <div class="calculator col-3 p-0">
+          <div class="history"></div>
+          <div class="main-result"></div>
+          <div class="input container">
+            <div class="input-row row text-center">
+              <div class="col-3">C</div>
+              <div class="col-3">%</div>
+              <div class="col-3">+/-</div>
+              <div class="col-3">/</div>
+            </div>
+            <div class="input-row row text-center">
+              <div class="col-3">7</div>
+              <div class="col-3">8</div>
+              <div class="col-3">9</div>
+              <div class="col-3">X</div>
+            </div>
+            <div class="input-row row text-center">
+              <div class="col-3">4</div>
+              <div class="col-3">5</div>
+              <div class="col-3">6</div>
+              <div class="col-3">-</div>
+            </div>
+            <div class="input-row row text-center">
+              <div class="col-3">1</div>
+              <div class="col-3">2</div>
+              <div class="col-3">3</div>
+              <div class="col-3">+</div>
+            </div>
+            <div class="input-row row text-center">
+              <div class="col-3">0</div>
+              <div class="col-3">,</div>
+              <div class="col-6">=</div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
